--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,5 @@
 
 Изменить поле ответственного в формах, чтобы подтягивалось от user
 Настроить middleware чтобы пользователь не мог зайти на страницу администратора
+
+Переделать обновление данных пользователя не через api, а через серверный экшн
